--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Generador de Vagrantfile</title>
 </head>
 <body>
-    <h2>Configuracio de la maquina virtual</h2>
+    <h2>Configuracio de la maquina virtual 1</h2>
     <form action="codi.php" method="POST">
         CPUs: <input type="number" name="cpus" required><br>
         RAM (MB): <input type="number" name="ram" required><br>
