--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+Grup15 FaseC
 <form action="codi.php" method="POST">
     CPUs: <input type="number" name="cpus" required><br>
     RAM (MB): <input type="number" name="ram" required><br>
