--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Grup15 FaseC
+Grup15 FaseC1
 <form action="codi.php" method="POST">
     CPUs: <input type="number" name="cpus" required><br>
     RAM (MB): <input type="number" name="ram" required><br>
