--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     RAM (MB): <input type="number" name="ram" required><br>
     Nom de la maquina: <input type="text" name="vm_name" required><br>
     Hostname: <input type="text" name="hostname" required><br>
-    Carpeta host: <input type="text" name="host_folder" required><br>
+    Carpeta hosts: <input type="text" name="host_folder" required><br>
     Carpeta VM: <input type="text" name="vm_folder" required><br>
     Port host: <input type="number" name="port_host" required><br>
     Port VM: <input type="number" name="port_vm" required><br>
