--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <form action="codi.php" method="POST">
-    CPUs: <input type="number" name="cpus" required><br>
+    CPUss: <input type="number" name="cpus" required><br>
     RAM (MB): <input type="number" name="ram" required><br>
     Nom de la maquina: <input type="text" name="vm_name" required><br>
     Hostname: <input type="text" name="hostname" required><br>
